Signup and login: ready (security issue still exists) Internationalisation: ready Basic pages: yes

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,6 +1,6 @@
 navbar.home=Домой
 navbar.authors=Авторы
-navbar.fanfics=Фанфики
+navbar.works=Фанфики
 navbar.rules=Правила
 navbar.login=Войти
 navbar.signup=Зарегистрироваться
@@ -8,7 +8,7 @@ navbar.signup=Зарегистрироваться
 dropdown.news=Новости
 dropdown.profile=Мой профиль
 dropdown.works=Мои работы
-dropdown.likes=Мои лайки
+dropdown.saved=Сохраненные
 dropdown.logout=Выйти
 
 error.title=Ошибка
@@ -25,9 +25,8 @@ login.button=Войти
 login.newuser1=Новый пользователь? Нажмите
 login.newuser2=сюда
 login.newuser3=чтобы зарегистроваться.
-login.success=Вы вошли в аккаунт!
-login.error_username=Не существует пользователя с таким именем!
-login.error_password=Неверный пароль!
+login.error_username=Не существует пользователя с таким именем
+login.error_password=Неверный пароль
 login.error=Ошибка при входе
 
 signup.email=Электронная почта
@@ -41,7 +40,71 @@ signup.upload_success=Изображение успешно загружено
 signup.upload_error=Ошибка при загрузке, повторите попытку
 signup.birthday=Ваша дата рождения
 signup.description=Опишите себя в нескольких предложениях
+signup.characters_left=Осталось символов:
 signup.button=Зарегистрироваться
-signup.success=Теперь вы можете войти в аккаунт!
-signup.error_exists=Пользователь с такими почтой или именем уже существует!
 signup.error=Ошибка при регистрации
+signup.error_exists=Пользователь с таким именем уже существует
+signup.error_date=Дата рождения не соответствует принятому формату
+
+profile.language.en=Английский
+profile.language.ru=Русский
+profile.theme.light=Светлая
+profile.theme.dark=Темная
+
+work.state=Состояние:
+work.state.complete=Завершен
+work.state.in_progress=В процессе
+
+work.rating=Рейтинг:
+work.rating.g=Фанфики для любой аудитории.
+work.rating.pg_13=Присутствуют романтические отношения на уровне поцелуев и/или могут присутствовать упоминания насилия или других тяжелых моментов.
+work.rating.r=Присутствуют сцены насилия или эротического арактера без детального описания.
+work.rating.nc_17=Детально описаны эротические сцены, сцены насилия или другого тяжелого характера.
+
+work.category=Направление:
+work.category.gen=Джен
+work.category.f_f=Ж/Ж
+work.category.m_f=М/Ж
+work.category.m_m=М/М
+work.category.mixed=Смешанная
+work.category.other=Другое
+
+work.category.types=Категории
+work.category.types.anime_and_manga=Аниме и манга
+work.category.types.books=Книги
+work.category.types.cartoons_and_comic_books=Мультфильмы и комиксы
+work.category.types.games=Видео-игры
+work.category.types.theater_and_musicals=Театр и мюзиклы
+work.category.types.real_people=Знаменитости и реальные люди
+work.category.types.original=Ориджинал
+work.category.types.other=Другое
+
+work.tags=Теги
+
+work.fandom_type.undefined=Не вышло определить тип фандома
+
+list.work.empty=Пока не было загружено ни одной работы :(
+list.work.my_works.empty=Вы пока не загрузили ни одной работы :(
+list.author.empty=Пока ни один пользователь не загрузил свои работы :(
+list.tag.empty=Не найдено ни одного тега :(
+list.tag.all=Все теги
+list.fandom.empty=Не найдено ни одного фандома :(
+
+authors.popular=Популярные авторы
+
+home.works.search=Поиск
+home.works.add_fic=Добавить фанфик
+
+home.add_fic.label=Добавить новый фанфик
+home.add_fic.name=Название
+home.add_fic.type=Тип
+home.add_fic.type.fandom=Фэндомный
+home.add_fic.type.fandom.search=Фэндомы
+home.add_fic.type.fandom.add=Добавить новый фэндом
+home.add_fic.rating=Рейтинг
+home.add_fic.category=Направленность
+home.add_fic.tags=Тэги
+home.add_fic.tags.add=Добавить тэг
+home.add_fic.description=Описание
+home.add_fic.comment=Комментарий
+home.add_fic.save=Сохранить
