--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 navbar.home=Home
 navbar.authors=Authors
-navbar.fanfics=Fanfics
+navbar.works=Works
 navbar.rules=Rules
 navbar.login=Log in
 navbar.signup=Sign up
@@ -8,12 +8,12 @@ navbar.signup=Sign up
 dropdown.news=News
 dropdown.profile=My profile
 dropdown.works=My works
-dropdown.likes=My likes
+dropdown.saved=Saved
 dropdown.logout=Log out
 
 error.title=Error page
 error.head=Oops...
-error.body=Guess something terrible happend, sorry :(
+error.body=Guess something terrible happened, sorry :(
 
 success.title=Success page
 success.head=Success!
@@ -25,9 +25,8 @@ login.button=Log in
 login.newuser1=New user? Click
 login.newuser2=here
 login.newuser3=to sign up
-login.success=Now you're logged in!
-login.error_username=No user with such username!
-login.error_password=Invalid password!
+login.error_username=No user with such username
+login.error_password=Invalid password
 login.error=Error during login
 
 signup.email=Email
@@ -41,7 +40,71 @@ signup.upload_success=Image uploaded successfully
 signup.upload_error=Error during upload, try again 
 signup.birthday=Your birthday
 signup.description=Describe yourself in a few sentences
+signup.characters_left=Characters left:
 signup.button=Sign up
-signup.success=Now you can log in!
-signup.error_exists=User with these email or username already exists!
 signup.error=Error during signup
+signup.error_exists=User with this username already exists
+signup.error_date=Invalid birth date
+
+profile.language.en=English
+profile.language.ru=Russian
+profile.theme.light=Light
+profile.theme.dark=Dark
+
+work.state=State:
+work.state.complete=Complete
+work.state.in_progress=In progress
+
+work.rating=Rating:
+work.rating.g=General Audiences (all ages admitted)
+work.rating.pg_13=Teen and Up Audiences (some material may be inappropriate for children under 13)
+work.rating.r=Mature (contains some adult material)
+work.rating.nc_17=Explicit (not recommended for people under 17)
+
+work.category=Category:
+work.category.gen=Gen
+work.category.f_f=F/F
+work.category.m_f=M/F
+work.category.m_m=M/M
+work.category.mixed=Mixed
+work.category.other=Other
+
+work.category.types=Categories
+work.category.types.anime_and_manga=Anime & manga
+work.category.types.books=Books
+work.category.types.cartoons_and_comic_books=Cartoons & Comic books
+work.category.types.games=Video games
+work.category.types.theater_and_musicals=Theater & Musicals
+work.category.types.real_people=Celebrities & Real people
+work.category.types.original=Original
+work.category.types.other=Other
+
+work.tags=Tags
+
+work.fandom_type.undefined=Failed to define fandom type
+
+list.work.empty=No works have been added yet :(
+list.work.my_works.empty=You haven't uploaded any works yet :(
+list.author.empty=No user has uploaded their works yet :(
+list.tag.empty=No tags have been found :(
+list.tag.all=All tags
+list.fandom.empty=No fandom has been found :(
+
+authors.popular=Popular authors
+
+home.works.search=Search
+home.works.add_fic=Add work
+
+home.add_fic.label=Add new work
+home.add_fic.name=Name
+home.add_fic.type=Type
+home.add_fic.type.fandom=Fandom
+home.add_fic.type.fandom.search=Fandoms
+home.add_fic.type.fandom.add=Add new fandom
+home.add_fic.rating=Rating
+home.add_fic.category=Category
+home.add_fic.tags=Tags
+home.add_fic.tags.add=Add new tag
+home.add_fic.description=Description
+home.add_fic.comment=Comment
+home.add_fic.save=Save
